[package]
name = "BevyTest"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_window", "bevy_winit", "bevy_render", "webgl2", "png", "jpeg", "x11", "bevy_text", "bevy_ui"] }
bevy-world-space = { git = "https://github.com/ClaytonKnittel/bevy-world-space.git", rev = "7ca4ec1a83bd4420b7eda2f2fc279cf556e30e2b" }
strum = { version = "0.27.1", features = ["derive"] }


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
